--- a/templates/update_student.html
+++ b/templates/update_student.html
@@ -11,10 +11,10 @@
     <body>
         <h1 style="font-size: x-large;">Update Student</h1>
         <form method="POST">
-            <input type="text" id="name" name="name" value = "{{student[1]}}" required><br>
-            <input type="text" id="age" name="age" value = "{{student[2]}}" required><br>
-            <input type="text" id="grade" name="grade" value = "{{student[3]}}" required><br>
-            <input type="text" id="subjects" name="subjects" value = "{{student[4]}}" required><br><br><br>
+            name: <input type="text" id="name" name="name" value = "{{student[1]}}" required><br><br>
+            age: <input type="text" id="age" name="age" value = "{{student[2]}}" required><br><br>
+            grade: <input type="text" id="grade" name="grade" value = "{{student[3]}}" required><br><br>
+            subjects: <input type="text" id="subjects" name="subjects" value = "{{student[4]}}" required><br><br><br>
             <input type="submit" value="SAVE"><br><br>
         </form>
         <a href="{{ url_for('home') }}" style="font-size: x-large;"><h4>Back to home</h4></a>
